# simgenes

./: LICENSE  README.md  pyproject.toml  requirements.txt  simgenes.toml
.github/workflows/: python-package.yml  python-publish.yml
assets/: README.md
simgenes/: __init__.py
src/simgenes/: __init__.py  simgenes.py
tests/: tests.py
