[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Simgenes"
version = "0.0.2"
authors = [
  { name="Celio D. Santos-Junior", email="celio.diasjunior@gmail.com" },
]
description = "A package to generate random gene/protein sequences"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/celiosantosjr/simgenes"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
