[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Simgenes"
version = "0.0.22"
authors = [
  { name="Celio D. Santos-Junior", email="celio.diasjunior@gmail.com" },
]
description = "A package to generate random gene/protein sequences"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/celiosantosjr/simgenes"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
